trying new modification

--- a/problem set 2 (1).ipynb
+++ b/problem set 2 (1).ipynb
@@ -37,6 +37,7 @@
     }
    ],
    "source": [
+    "#some modifications\n",
     "a = 0       #creating varibale a\n",
     "def b():    #defining variable b\n",
     " global a   #global variable a\n",
